# PoseEstimator

./: CMakeLists.txt  cuda_renderer12_04.cu  cuda_rendererOLD.cu
config/: camera.yaml  cameranew.yaml  cameranew2.yaml  cameranew2leg.yaml
include/: contour_matcher.hpp  cuda_renderer.hpp  image_preprocessor.hpp  model_renderer.hpp  pipeline.hpp  pose_filter.hpp  pose_optimizer.hpp  shader.frag  shader.vert  shader_frag.h  shader_vert.h  step_loader.hpp  types.hpp  vk.hpp
src/: contour_matcher.cpp  cuda_renderer.cu  image_preprocessor.cpp  main.cpp  model_renderer.cpp  pipeline.cpp  pose_filter.cpp  pose_optimizer.cpp  step_loader.cpp  vk.cpp
